--- a/src/app/components/increment/increment.component.html
+++ b/src/app/components/increment/increment.component.html
@@ -9,7 +9,9 @@
     </span>
             <input type="number"
                 class="form-control"
+                [ngClass]="{'is-invalid': progress > 100 || progress < 0}"
                 placeholder="Progress"
+                (ngModelChange)="onChange($event)"
                 [(ngModel)]="progress">
     <span class="input-group-btn">
         <button
