--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -17,7 +17,7 @@
                         <input class="form-control"
                             type="text"
                             placeholder="Name"
-                            formControlName="name"
+                            formControlName="nombre"
                         >
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="row">
                     <div class="col text-danger">
-                        <p *ngIf="invalidField('name')">El nombre es obligatorio</p>
+                        <p *ngIf="invalidField('nombre')">El nombre es obligatorio</p>
                         <p *ngIf="invalidField('email')">El email es obligatorio y debe ser válido</p>
                         <p *ngIf="invalidpassword()">Las contraseñas deben ser iguales</p>
                         <p *ngIf="termsAccepted()">Debe aceptar los términos y condiciones</p>
