--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -208,7 +208,7 @@
                   <a href="#">
                     <div class="user-img">
                       <img
-                        src="./assets/images/users/1.jpg"
+                        [src]="user.imageUrl"
                         alt="user"
                         class="img-circle"
                       />
@@ -323,7 +323,7 @@
             aria-haspopup="true"
             aria-expanded="false"
             ><img
-              src="./assets/images/users/1.jpg"
+              [src]="user.imageUrl"
               alt="user"
               class="profile-pic"
           /></a>
@@ -332,11 +332,11 @@
               <li>
                 <div class="dw-user-box">
                   <div class="u-img">
-                    <img src="./assets/images/users/1.jpg" alt="user" />
+                    <img [src]="user.imageUrl" alt="user" />
                   </div>
                   <div class="u-text">
-                    <h4>Steave Jobs</h4>
-                    <p class="text-muted">varun@gmail.com</p>
+                    <h4>{{ user.nombre }}</h4>
+                    <p class="text-muted">{{ user.email }}</p>
                     <a
                       href="pages-profile.html"
                       class="btn btn-rounded btn-danger btn-sm"
