--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -51,13 +51,19 @@
             <div class="card-body">
                 <h4 class="card-title">Avatar</h4>
                 <h6 class="card-subtitle">Imágen del usuario</h6>
-                <img src="" alt="">
-                <input type="file">
+                <div class="text-center">
+                    <img *ngIf="!imgTemp" [src]="user.imageUrl" class="image-avatar">
+                    <img *ngIf="imgTemp" [src]="imgTemp" class="image-avatar">
+                </div>
+                <input type="file"
+                    (change)="changeImage($event.target)">
                 <br>
                 <br>
                 <button
                     type="submit"
                     class="btn btn-success btn-block waves-effect waves-light m-r-10"
+                    [disabled]="!imageUpload"
+                    (click)="uploadImage()"
                 >
                     <i class="fa fa-save"></i>
                     Cambiar imágen
