--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -28,6 +28,7 @@
                                 id="exampleInputEmail1"
                                 placeholder="Ingrese su email"
                                 formControlName="email"
+                                [readonly]="user.google"
                             >
                         </div>
                     </div>
