--- a/src/styles.css
+++ b/src/styles.css
@@ -34,3 +34,17 @@
     border-radius: 100%;
     width: 40px;
 }
+
+.hidden {
+    display: none;
+}
+
+.backgroun-modal-image {
+    background-color: rgba(0, 0, 0, 0.4);
+    height: 100%;
+    left: 0px;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 9999;
+}
