Open modal with singleton

--- a/src/app/components/modal-image/modal-image.component.html
+++ b/src/app/components/modal-image/modal-image.component.html
@@ -1,5 +1,5 @@
 <div class="backgroun-modal-image animated fadeIn fast"
-    [class.hidden]="hideModal">
+    [class.hidden]="modalImageService.hideModal">
     
     <div class="modal fade show"
         id="exampleModal"
