--- a/src/app/pages/maintenance/users/users.component.html
+++ b/src/app/pages/maintenance/users/users.component.html
@@ -47,6 +47,7 @@
                                     <img class="avatar"
                                         [src]="user.imageUrl"
                                         alt="Avatar de usuario"
+                                        (click)="openModal(user)"
                                     >
                                 </td>
                                 <td>{{ user.email }}</td>
