Custom pipe to manage images

--- a/src/app/pages/maintenance/users/users.component.html
+++ b/src/app/pages/maintenance/users/users.component.html
@@ -44,7 +44,7 @@
                         <tbody>
                             <tr *ngFor="let user of users">
                                 <td class="text-center">
-                                    <img class="avatar"
+                                    <img class="avatar cursor"
                                         [src]="user.imageUrl"
                                         alt="Avatar de usuario"
                                         (click)="openModal(user)"
