--- a/src/app/pages/maintenance/doctors/doctors.component.html
+++ b/src/app/pages/maintenance/doctors/doctors.component.html
@@ -4,12 +4,15 @@
             <div class="card-body">
                <input type="text"
                     class="form-control"
-                    placeholder="Buscar médico"> 
+                    placeholder="Buscar médico"
+                    #txtTermn
+                    (keyup)="search(txtTermn.value)"> 
             </div>
         </div>
     </div>
 </div>
-<div class="row animated fadeIn fast">
+<div class="row animated fadeIn fast"
+    *ngIf="loading">
     <div class="col-12">
         
         <div class="alert alert-info text-center">
@@ -19,43 +22,67 @@
         </div>
     </div>
 </div>
-<div class="row">
+<div class="row"
+    *ngIf="!loading">
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Usuarios</h4>
-                <h6 class="card-subtitle">Usuarios registrados en la aplicación</h6>
+                <div class="row">
+                    <div class="col_8">
+                        <h4 class="card-title">Médicos ({{ doctors.length }})</h4>
+                        <h6 class="card-subtitle">Médicos registrados en la aplicación</h6>
+                    </div>
+                    <div class="col">
+                        <div class="text-right">
+                            <a class="btn btn-primary"
+                                routerLink="/dashboard/doctor/nuevo">
+                                <i class="fa fa-hospital-o"></i>
+                                Crear médico
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="table-responsive">
                     <table class="table table-bordered">
                         <thead>
                             <tr>
-                                <th>Avatar</th>
-                                <th>Correo</th>
+                                <th class="w100">Foto</th>
                                 <th>Nombre</th>
-                                <th>Role</th>
-                                <th>Auth</th>
-                                <th class="text-nowrap">Acciones</th>
+                                <th class=" w100 text-nowrap">Acciones</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>Tantas earum numeris</td>
-                                <td>Tantas earum numeris</td>
-                                <td>Tantas earum numeris</td>
-                                <td>Tantas earum numeris</td>
-                                <td>Tantas earum numeris</td>
+                            <tr *ngFor="let doctor of doctors">
+                                <td class="text-center">
+                                    <img [src]="doctor.img | imagen: 'doctors'"
+                                        [alt]="doctor.name"
+                                        class="w100"
+                                        (click)="openModal(doctor)">
+                                </td>
                                 <td>
+                                    {{ doctor.name }}
+                                </td>
                                 <td class="text-nowrap text-center">
-                                    <a href="#" data-toggle="tooltip" data-original-title="Edit"> <i class="fa fa-pencil text-inverse m-r-10"></i> </a>
-                                    <a href="#" data-toggle="tooltip" data-original-title="Erase"> <i class="fa fa-close text-danger"></i> </a>
+                                    <a [routerLink]="['/dashboard/doctor', doctor._id]"
+                                        data-toggle="tooltip"
+                                        data-original-title="Actualizar">
+                                        <i class="fa fa-pencil text-inverse m-r-10"></i>
+                                    </a>
+                                    <a class="cursor"
+                                        data-toggle="tooltip"
+                                        data-original-title="Borrar"
+                                        (click)="deleteDoctor( doctor )">
+                                        <i class="fa fa-close text-danger"></i>
+                                    </a>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-                <button class="btn btn-secondary">Anterior</button>
+                <!-- <button class="btn btn-secondary">Anterior</button>
                 &nbsp;
-                <button class="btn btn-secondary">Siguiente</button>
+                <button class="btn btn-secondary">Siguiente</button> -->
             </div>
         </div>
     </div>
